# telepathy-qt

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  HACKING  Makefile.am  NEWS  README  TODO  autogen.sh  cmake_uninstall.cmake.in  config-version.h.in  config.h.in  configure.ac  customdoxygen.css  doxygen-footer.html  doxygen-header.html  doxygen.cfg  doxygen.cfg.in  doxygen.css
TelepathyQt/: AbstractAdaptor  AbstractClient  AbstractClientApprover  AbstractClientHandler  AbstractClientObserver  AbstractDBusInterfaceAdaptee  AbstractDBusServiceInterface  AbstractInterface  AbstractProtocolInterface  Account  AccountCapabilityFilter  AccountFactory  AccountFilter  AccountInterface  AccountInterfaceAddressingInterface  AccountInterfaceAvatar1Interface  AccountInterfaceAvatarInterface  AccountInterfaceStorageInterface  AccountManager  AccountManagerInterface  AccountPropertyFilter  AccountSet  AndFilter  AuthenticationTLSCertificateInterface  AvatarData  AvatarSpec  BaseCall  BaseChannel  BaseConnection  BaseConnectionManager  BaseDebug  BaseProtocol  BaseProtocolAddressingInterface  BaseProtocolAvatarsInterface  BaseProtocolPresenceInterface  CMakeLists.txt  Call1ContentInterface  Call1ContentInterfaceAudioControl1Interface  Call1ContentInterfaceDTMF1Interface  Call1ContentInterfaceMediaInterface  (+632 more)
TelepathyQt/Farsight/: CMakeLists.txt  Channel  TelepathyQtFarsight-uninstalled.pc.in  TelepathyQtFarsight.pc.in  TelepathyQtFarsightConfig.cmake.in  channel.cpp  channel.h  global.h
TelepathyQt/Farstream/: CMakeLists.txt  Channel  Global  PendingChannel  PendingTfChannel  TelepathyQt4YellFarstream-uninstalled.pc.in  TelepathyQt4YellFarstream.pc.in  TelepathyQtFarstream-uninstalled.pc.in  TelepathyQtFarstream.pc.in  TelepathyQtFarstreamConfig.cmake.in  Types  channel.cpp  channel.h  global.h  types.h
TelepathyQt/Service/: AbstractAdaptor  BaseConnectionManager  CMakeLists.txt  Global  TelepathyQtService-uninstalled.pc.in  TelepathyQtService.pc.in  TelepathyQtServiceConfig.cmake.in  abstract-adaptor.cpp  abstract-adaptor.h  base-connection-manager-internal.h  base-connection-manager.cpp  base-connection-manager.h  global.h  stub.cpp
TelepathyQt4/: AbstractClient  AbstractClientApprover  AbstractClientHandler  AbstractClientObserver  AbstractInterface  Account  AccountCapabilityFilter  AccountFactory  AccountFilter  AccountInterface  AccountInterfaceAddressingInterface  AccountInterfaceAvatarInterface  AccountInterfaceStorageInterface  AccountManager  AccountManagerInterface  AccountPropertyFilter  AccountSet  AndFilter  AuthenticationTLSCertificateInterface  AvatarData  AvatarSpec  CMakeLists.txt  CapabilitiesBase  Channel  ChannelClassFeatures  ChannelClassSpec  ChannelClassSpecList  ChannelDispatchOperation  ChannelDispatchOperationInterface  ChannelDispatcher  ChannelDispatcherInterface  ChannelFactory  ChannelFeatureSpec  ChannelInterface  ChannelInterfaceAnonymityInterface  ChannelInterfaceCallStateInterface  ChannelInterfaceChatStateInterface  ChannelInterfaceConferenceInterface  ChannelInterfaceDTMFInterface  ChannelInterfaceDestroyableInterface  (+486 more)
TelepathyQt4/Client/: AbstractInterface  Account  AccountInterface  AccountManager  AccountManagerInterface  Channel  ChannelInterface  ChannelInterfaceCallStateInterface  ChannelInterfaceChatStateInterface  ChannelInterfaceDTMFInterface  ChannelInterfaceGroupInterface  ChannelInterfaceHoldInterface  ChannelInterfaceMediaSignallingInterface  ChannelInterfacePasswordInterface  ChannelTypeContactListInterface  ChannelTypeRoomListInterface  Contact  (+139 more)
examples/: CMakeLists.txt  Makefile.am
spec/: Account.xml  Account_Interface_Addressing.xml  Account_Interface_Addressing1.xml  Account_Interface_Avatar.xml  Account_Interface_Avatar1.xml  Account_Interface_External_Password_Storage.xml  Account_Interface_External_Password_Storage1.xml  Account_Interface_Hidden.xml  Account_Interface_Hidden1.xml  Account_Interface_Minimum_Presence.xml  Account_Interface_Storage.xml  Account_Interface_Storage1.xml  Account_Manager.xml  Account_Manager_Interface_Hidden.xml  Account_Manager_Interface_Hidden1.xml  Authentication_TLS_Certificate.xml  Call1_Content.xml  Call1_Content_Interface_Audio_Control1.xml  Call1_Content_Interface_DTMF1.xml  Call1_Content_Interface_Media.xml  Call1_Content_Interface_Video_Control1.xml  Call1_Content_Media_Description.xml  Call1_Content_Media_Description_Interface_RTCP_Extended_Reports1.xml  Call1_Content_Media_Description_Interface_RTCP_Feedback1.xml  Call1_Content_Media_Description_Interface_RTP_Header_Extensions1.xml  Call1_Interface_Mute.xml  Call1_Stream.xml  Call1_Stream_Endpoint.xml  Call1_Stream_Interface_Media.xml  Call_Content.xml  Call_Content_Codec_Offer.xml  Call_Content_Interface_Audio_Control.xml  Call_Content_Interface_DTMF.xml  Call_Content_Interface_Media.xml  Call_Content_Interface_Mute.xml  Call_Content_Interface_Video_Control.xml  Call_Content_Media_Description.xml  Call_Content_Media_Description_Interface_RTCP_Extended_Reports.xml  Call_Content_Media_Description_Interface_RTCP_Feedback.xml  Call_Content_Media_Description_Interface_RTP_Header_Extensions.xml  (+176 more)
tests/: CMakeLists.txt  Makefile.am  README  account-manager.py  callbacks.cpp  capabilities.cpp  channel-class-spec.cpp  features.cpp  file-transfer-channel-creation-properties.cpp  key-file.cpp  manager-file.cpp  presence.cpp  profile-manager.cpp  profile.cpp  ptr.cpp  rccspec.cpp  test-key-file-format-error.ini  test-key-file.ini  utils.cpp
tools/: CMakeLists.txt  Makefile.am  c-constants-gen.py  check-coding-style.mk  check-misc.sh  git-which-branch.sh  glib-ginterface-gen.py  glib-gtypes-generator.py  glib-interfaces-gen.py  glib-signals-marshal-gen.py  lcov.am  libglibcodegen.py  libqt4codegen.py  libqtcodegen.py  libtpcodegen.py  manager-file.py  qt-client-gen.py  qt-constants-gen.py  qt-svc-gen.py  qt-types-gen.py  qt4-client-gen.py  qt4-constants-gen.py  qt4-types-gen.py  repeat-tests.sh  telepathy-glib.supp  telepathy-qt4.mk  telepathy.am  tp-qt-tests.supp  tp-qt4-tests.supp  valgrind.mk  with-session-bus.sh  xincludator.py
(+465 files in other folders)
